--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,11 +1,11 @@
-monitor=DP-3,1920x1080,0x0,1
-monitor=DP-2,1920x1080,1920x0,1
-
+monitor=eDP-1,1920x1080,0x0,1
+monitor=HDMI-A-2,1920x1080,1920x0,1
 plugin = /home/john/.config/hypr/plugins/virtual-desktops.so
 
 # startup programs
+exec-once = hyprpaper
+exec-once = hypridle
 exec-once = waybar
-exec-once = swaybg -m fill -i ~/.wallpapers/city.jpg
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
@@ -15,17 +15,10 @@ exec-once = swayosd-server
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
-env = GTK_THEME,Materia-dark
+env = GTK_THEME,Fluent-Dark
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-# nvidia patch
-env = XCURSOR_SIZE,24
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
 
 env = QT_QPA_PLATFORMTHEME,qt5ct
 
@@ -41,14 +34,18 @@ input {
 
     accel_profile = adaptive   
 
-    follow_mouse = 2
+    follow_mouse = 1
     mouse_refocus = false
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
+	scroll_factor=0.25
+	disable_while_typing = false
+	middle_button_emulation = false
+
     }
 
-    sensitivity = -0.15 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.1 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
@@ -73,16 +70,17 @@ decoration {
     rounding = 0
 
     blur {
-        enabled = true
+        enabled = false
         size = 3
         passes = 1
     }
 
-    drop_shadow = true
+    drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
 }
+
 
 animations {
     enabled = true
@@ -90,13 +88,14 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+    bezier=virtdesktopslide,0.16, 1, 0.3, 1
 
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 3, virtdesktopslide, slide
 }
 
 dwindle {
@@ -148,15 +147,20 @@ $mainMod = SUPER
 $altControl = Alt_CTRL
 
 # virtual desktops
-bind = $altControl, O, nextdesk
-bind = $altControl, I, prevdesk
-binde = $altControl, K, resizeactive, 40 0
-binde = $altControl, J, resizeactive, -40 0
+bind = Alt_SHIFT, O, nextdesk
+bind = Alt_SHIFT, I, prevdesk
+bind = Alt_SHIFT, 1, movetodesksilent, 1
+bind = Alt_SHIFT, 2, movetodesksilent, 2
+bind = Alt_SHIFT, 3, movetodesksilent, 3
+bind = Alt_SHIFT, 4, movetodesksilent, 4
+
+binde = Alt_SHIFT, K, resizeactive, 40 0
+binde = Alt_SHIFT, J, resizeactive, -40 0
 bind = $altControl, T, exec, alacritty
 bind = Alt, Q, killactive,
 bind = Alt, F4, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, V, togglefloating,
+$bind = $mainMod, M, exit,
+bind = Alt, V, togglefloating,
 
 # rofi
 bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
@@ -164,12 +168,11 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # powermenu
-bind = $altControl,0 , exec, ~/.local/bin/powermenu.sh
-
+bind = $altControl,DELETE, exec, ~/.local/bin/powermenu.sh
 bind = Alt, 1, movewindow, mon:1
 bind = Alt, 2, movewindow, mon:0
-bind = Alt, O, focusmonitor, DP-2
-bind = Alt, I, focusmonitor, DP-3
+bind = Alt, O, focusmonitor, e-DP-1
+bind = Alt, I, focusmonitor, HDMI-A-2
 
 
 # window rules
@@ -177,8 +180,11 @@ windowrule=float,title:^(Picture-in-Picture)$
 
 # audio control
 binde=, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-binde=, XF86AudioLowerVolume, exec, exec  swayosd-client --output-volume lower
-bindle=,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+binde=, XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bind=,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bind=,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+binde=,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+binde=,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 
 # screenshots
 bind = SUPER_SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
@@ -207,5 +213,5 @@ bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = Alt, mouse:272, movewindow
+bindm = Alt, mouse:273, resizewindow
