--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -88,7 +88,7 @@ animations {
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    bezier=virtdesktopslide,0.16, 1, 0.3, 1
+    bezier=virtdesktopslide,0.13, 1, 0.75,1
 
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
