--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -11,9 +11,10 @@ exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayosd-server
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=XDG_MENU_PREFIX=arch- kbuildsycoca6
+exec-once=sway-audio-idle-inhibit
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
 
 env = GTK_THEME,Fluent-Dark
 env = QT_QPA_PLATFORMTHEME,qt5ct
@@ -21,9 +22,9 @@ env = QT_QPA_PLATFORM,wayland;xcb
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = GDK_DEBUG,portals
 env = QT_QPA_PLATFORMTHEME,qt5ct
+env = HYPRCURSOR_THEME, Adwaita
+env = HYPRCURSOR_SIZE, 24
 
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     kb_variant =
@@ -49,8 +50,6 @@ input {
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
     gaps_out = 10
     border_size = 2
@@ -60,13 +59,10 @@ general {
     layout = dwindle
     cursor_inactive_timeout = 3
     no_cursor_warps = false
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
 decoration {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 0
 
     blur {
@@ -85,11 +81,8 @@ decoration {
 animations {
     enabled = true
 
-    # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = custom,0.13, 1, 0.75,1
 
-    #animation = windows, 1, 7, myBezier
     animation = windows, 1, 3, custom, popin
     animation = windowsOut, 1, 3, custom, popin 80%
     animation = border, 1, 10, default
@@ -100,28 +93,22 @@ animations {
 }
 
 dwindle {
-    # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
     pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
     preserve_split = true # you probably want this
 }
 
 master {
-    # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
     new_is_master = true
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = false
 }
 
 misc {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
 }
 
-# Example per-device config
-# See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device:epic-mouse-v1 {
     sensitivity = -0.5
 }
@@ -136,11 +123,9 @@ plugin {
 	}
 }
 
-# Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 
 windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$
 
@@ -162,17 +147,19 @@ bind = $altControl, 2, movetodesksilent, 2
 bind = $altControl, 3, movetodesksilent, 3
 bind = $altControl, 4, movetodesksilent, 4
 
-binde = Alt_SHIFT, K, resizeactive, 40 0
-binde = Alt_SHIFT, J, resizeactive, -40 0
 bind = Alt_Control, T, exec, alacritty
+bind = Alt_Control, F, exec, firefox
+bind = Alt_Control, V, exec, code
+bind = Alt_Control, S, exec, spotify
 bind = Alt, Q, killactive,
 bind = Alt, F4, killactive,
-
 
 bind = Alt, V, togglefloating,
 bind = Alt, Y, togglesplit
 binde = $altControl, K, resizeactive, 40 0
 binde = $altControl, J, resizeactive, -40 0
+binde = Alt_SHIFT, K, resizeactive, 40 0
+binde = Alt_SHIFT, J, resizeactive, -40 0
 
 # rofi
 bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
@@ -183,8 +170,8 @@ bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
 bind = $altControl,DELETE, exec, ~/.local/bin/powermenu.sh
 bind = Alt, 1, movewindow, mon:1
 bind = Alt, 2, movewindow, mon:0
-bind = Alt, I, exec, ~/.local/bin/monitor_left
-bind = Alt, O, exec, ~/.local/bin/monitor_right
+bind = Alt, I, exec, hyprctl dispatch focusmonitor eDP-1 && hyprctl dispatch focusmonitor HDMI-A-2
+bind = Alt, O, exec, hyprctl dispatch focusmonitor HDMI-A-2 && hyprctl dispatch focusmonitor eDP-1
 
 
 # window rules
@@ -203,7 +190,8 @@ bind = SUPER_SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 
 bind = Alt, J, movefocus, l
 bind = Alt, K, movefocus, r
-bind = Alt, U, movefocus, d
+bind = Alt, U, movefocus, u
+bind = Alt, N, movefocus, d
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = Alt, mouse:272, movewindow
