--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -1,7 +1,7 @@
-monitor=eDP-1,1920x1080,0x0,1
-monitor=HDMI-A-2,1920x1080,-1920x0,1
-plugin = /home/john/.config/hypr/plugins/virtual-desktops.so
+monitor=eDP-1,1920x1080@60,0x0,1
+monitor=HDMI-A-2,preferred@highrr,1920x0,1
 
+#monitor=HDMI-A-2, disable
 # startup programs
 exec-once = hyprpaper
 exec-once = hypridle
@@ -11,7 +11,8 @@ exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayosd-server
-exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = source ~/.zshrc
+#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=XDG_MENU_PREFIX=arch- kbuildsycoca6
 exec-once=sway-audio-idle-inhibit
 
@@ -40,25 +41,23 @@ input {
 
     touchpad {
         natural_scroll = true
-	scroll_factor=0.25
+	scroll_factor=0.2
 	disable_while_typing = false
 	middle_button_emulation = false
 
     }
 
-    sensitivity = -0.05 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
 general {
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 11
     border_size = 2
     col.active_border = rgba(33ccffee)
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
-    cursor_inactive_timeout = 3
-    no_cursor_warps = false
     allow_tearing = false
 }
 
@@ -66,21 +65,16 @@ decoration {
     rounding = 0
 
     blur {
-        enabled = false
-        size = 3
-        passes = 1
+	enabled = false
     }
 
     drop_shadow = false
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 
 animations {
     enabled = true
-
+    first_launch_animation = false
     bezier = custom,0.13, 1, 0.75,1
 
     animation = windows, 1, 3, custom, popin
@@ -88,8 +82,12 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 4, default
-    animation = windowsMove, 1, 2, custom, slide
+    animation = workspaces, 1, 3, default
+    animation = windowsMove, 1, 2.5, custom, slide
+}
+
+cursor {
+	inactive_timeout = 3
 }
 
 dwindle {
@@ -97,69 +95,64 @@ dwindle {
     preserve_split = true # you probably want this
 }
 
-master {
-    new_is_master = true
-}
-
-gestures {
-    workspace_swipe = false
-}
 
 misc {
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
+    disable_splash_rendering = true
 }
 
-device:epic-mouse-v1 {
-    sensitivity = -0.5
-}
-
-plugin {
-	virtual-desktops {
-		names = 1:test1, 2:test2, 3:test3, 4:test4
-		cycleworkspaces = 0
-		rememberlayout = none
-		notifyinit = 0
-		verbose_logging = 0
-	}
-}
-
-# windowrule = float, ^(kitty)$
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$
+# window rules
+windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$ 
+windowrulev2 = center, floating:[1] 
+windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
 $mainMod = SUPER
 $altControl = Alt_CTRL
+$modA = Alt_CTRL
+$modB = Alt_SHIFT
+$modC = SUPER
+
+# workspaces
+workspace = 1, monitor:eDP-1, default:true, persistent:true
+workspace = 2, monitor:HDMI-A-2, default:true, persistent:true
+workspace = 3, monitor:eDP-1, default:true, persistent:true
+workspace = 4, monitor:HDMI-A-2, default:true, persistent:true
+workspace = 5, monitor:eDP-1, default:true, persistent:true
+workspace = 6, monitor:HDMI-A-2, default:true, persistent:true
+workspace = 7, monitor:eDP-1, default:true, persistent:true
+workspace = 8, monitor:HDMI-A-2, default:true, persistent:true
+
+bind = $modB, 1, movetoworkspacesilent, 1
+bind = $modB, 2, movetoworkspacesilent, 3
+bind = $modB, 3, movetoworkspacesilent, 5
+bind = $modB, 4, movetoworkspacesilent, 7
+
 
 # virtual desktops
-bind = Alt_SHIFT, O, nextdesk
-bind = Alt_SHIFT, I, prevdesk
-bind = Alt_SHIFT, 1, movetodesksilent, 1
-bind = Alt_SHIFT, 2, movetodesksilent, 2
-bind = Alt_SHIFT, 3, movetodesksilent, 3
-bind = Alt_SHIFT, 4, movetodesksilent, 4
+bind = $modB, O, exec, ~/.local/bin/switch_desktops.sh 1
+bind = $modB, I, exec, ~/.local/bin/switch_desktops.sh -1
+bind = $modA, O, exec, ~/.local/bin/switch_desktops.sh 1
+bind = $modA, I, exec, ~/.local/bin/switch_desktops.sh -1
 
-bind = $altControl, O, nextdesk
-bind = $altControl, I, prevdesk
-bind = $altControl, 1, movetodesksilent, 1
-bind = $altControl, 2, movetodesksilent, 2
-bind = $altControl, 3, movetodesksilent, 3
-bind = $altControl, 4, movetodesksilent, 4
+# lock
+bind = $modA, L, exec, pidof hyprlock || hyprlock
 
-bind = Alt_Control, T, exec, alacritty
-bind = Alt_Control, F, exec, firefox
-bind = Alt_Control, V, exec, code
-bind = Alt_Control, S, exec, spotify
+bind = $modA, T, exec, alacritty
+bind = $modC, T, exec, alacritty
+bind = $modC, F, exec, firefox
+bind = $modC, V, exec, code
+bind = $modC, D, exec, dolphin
+bind = $modC, S, exec, spotify
 bind = Alt, Q, killactive,
 bind = Alt, F4, killactive,
 
+
 bind = Alt, V, togglefloating,
 bind = Alt, Y, togglesplit
-binde = $altControl, K, resizeactive, 40 0
-binde = $altControl, J, resizeactive, -40 0
-binde = Alt_SHIFT, K, resizeactive, 40 0
-binde = Alt_SHIFT, J, resizeactive, -40 0
+binde = $modA, K, resizeactive, 40 0
+binde = $modA, J, resizeactive, -40 0
+binde = $modB, K, resizeactive, 40 0
+binde = $modB, J, resizeactive, -40 0
 
 # rofi
 bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
@@ -168,12 +161,15 @@ bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
 
 # powermenu
 bind = $altControl,DELETE, exec, ~/.local/bin/powermenu.sh
-bind = Alt, 1, movewindow, mon:1
-bind = Alt, 2, movewindow, mon:0
-bind = Alt, I, exec, hyprctl dispatch focusmonitor eDP-1 && hyprctl dispatch focusmonitor HDMI-A-2
-bind = Alt, O, exec, hyprctl dispatch focusmonitor HDMI-A-2 && hyprctl dispatch focusmonitor eDP-1
+bind = Alt, 1, movewindow, mon:0
+bind = Alt, 2, movewindow, mon:1
+bind = Alt, O, exec, hyprctl dispatch focusmonitor eDP-1 && hyprctl dispatch focusmonitor HDMI-A-2
+bind = Alt, I, exec, hyprctl dispatch focusmonitor HDMI-A-2 && hyprctl dispatch focusmonitor eDP-1
 
-
+# media control
+bind = $modB,P, exec, playerctl --player=spotify play-pause
+bind = $modB, E,exec, playerctl --player=spotify previous
+bind = $modB, R,exec,  playerctl --player=spotify next
 # window rules
 windowrule=float,title:^(Picture-in-Picture)$
 
@@ -186,7 +182,7 @@ binde=,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
 binde=,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 
 # screenshots
-bind = SUPER_SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+bind = SUPER_SHIFT, S, exec, ~/.local/bin/screenshot.sh
 
 bind = Alt, J, movefocus, l
 bind = Alt, K, movefocus, r
