--- a/laptop/hypr/hyprlock.conf
+++ b/laptop/hypr/hyprlock.conf
@@ -1,7 +1,7 @@
 # BACKGROUND
 background {
     monitor = 
-    color = rgba(30, 33, 39, 1)
+    color = rgb(30, 33, 39)
     blur_passes = 0
     contrast = 0.8916
     brightness = 0.8172
@@ -21,16 +21,20 @@ input-field {
     monitor = eDP-1
     size = 250, 60
     outline_thickness = 2
-    roudning = 0
+    rounding = 0
     dots_size = 0.2 # Scale of input-field height, 0.2 - 0.8
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_rounding = -2
     dots_center = true
-    outer_color = rgba(0, 0, 0, 0)
-    inner_color = rgba(0, 0, 0, 0.5)
+    outer_color = rgb(51, 204, 255)
+    inner_color = rgb(30, 33, 39)
     font_color = rgb(255, 255, 255)
+    check_color = rgb(254, 208, 112)
+    fail_color = rgb(235, 75, 75)
+    fail_text = Failed
     fade_on_empty = false
     font_family = MesloLGS NF
-    placeholder_text = <i><span foreground="##cdd6f4">Password</span></i>
+    placeholder_text = Password
     hide_input = false
     position = 0, -60
     halign = center
@@ -40,7 +44,7 @@ input-field {
 # TIME
 label {
     monitor = eDP-1
-    text = cmd[update:1000] echo "$(date +"%-I:%M %P")"
+    text = cmd[update:1000] echo "$(date +"%-I:%M %^p")"
     color = $foreground
     color = rgba(255, 255, 255, 1)
     font_size = 60
