--- a/laptop/hypr/hyprland.conf
+++ b/laptop/hypr/hyprland.conf
@@ -1,22 +1,23 @@
-monitor=eDP-1,1920x1080@60,0x0,1
-monitor=HDMI-A-2,preferred@highrr,1920x0,1
+source = ~/.config/hypr/settings.conf
 
-#monitor=HDMI-A-2, disable
+# monitor settings
+monitor=$monitorA,1920x1080@60,0x0,1
+monitor=$monitorB,preferred@highrr,1920x0,1
+
 # startup programs
 exec-once = hyprpaper
 exec-once = hypridle
 exec-once = waybar
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = dunst
 exec-once = wl-paste --type text --watch cliphist store #Stores only text data
 exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 exec-once = swayosd-server
 exec-once = source ~/.zshrc
-#exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=XDG_MENU_PREFIX=arch- kbuildsycoca6
 exec-once=sway-audio-idle-inhibit
 
-
+# environment variables
 env = GTK_THEME,Fluent-Dark
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_QPA_PLATFORM,wayland;xcb
@@ -25,6 +26,7 @@ env = GDK_DEBUG,portals
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = HYPRCURSOR_THEME, Adwaita
 env = HYPRCURSOR_SIZE, 24
+env = XDG_MENU_PREFIX,plasma-
 
 input {
     kb_layout = us
@@ -33,7 +35,6 @@ input {
     kb_options =
     kb_rules =
 
-
     accel_profile = adaptive   
 
     follow_mouse = 1
@@ -41,10 +42,9 @@ input {
 
     touchpad {
         natural_scroll = true
-	scroll_factor=0.2
-	disable_while_typing = false
-	middle_button_emulation = false
-
+    	scroll_factor=0.2
+    	disable_while_typing = false
+    	middle_button_emulation = false
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -54,8 +54,8 @@ general {
     gaps_in = 5
     gaps_out = 11
     border_size = 2
-    col.active_border = rgba(33ccffee)
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba($activeBorder)
+    col.inactive_border = rgba($border)
 
     layout = dwindle
     allow_tearing = false
@@ -68,7 +68,9 @@ decoration {
 	enabled = false
     }
 
-    drop_shadow = false
+    shadow {
+        enabled = false
+    }
 }
 
 
@@ -88,6 +90,7 @@ animations {
 
 cursor {
 	inactive_timeout = 3
+    no_hardware_cursors = 0
 }
 
 dwindle {
@@ -95,6 +98,9 @@ dwindle {
     preserve_split = true # you probably want this
 }
 
+ecosystem {
+    no_update_news = true
+}
 
 misc {
     force_default_wallpaper = 0 # Set to 0 to disable the anime mascot wallpapers
@@ -102,25 +108,24 @@ misc {
 }
 
 # window rules
-windowrule = float, ^(org.kde.polkit-kde-authentication-agent-1)$ 
 windowrulev2 = center, floating:[1] 
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 
-$mainMod = SUPER
-$altControl = Alt_CTRL
-$modA = Alt_CTRL
-$modB = Alt_SHIFT
-$modC = SUPER
-
 # workspaces
-workspace = 1, monitor:eDP-1, default:true, persistent:true
-workspace = 2, monitor:HDMI-A-2, default:true, persistent:true
-workspace = 3, monitor:eDP-1, default:true, persistent:true
-workspace = 4, monitor:HDMI-A-2, default:true, persistent:true
-workspace = 5, monitor:eDP-1, default:true, persistent:true
-workspace = 6, monitor:HDMI-A-2, default:true, persistent:true
-workspace = 7, monitor:eDP-1, default:true, persistent:true
-workspace = 8, monitor:HDMI-A-2, default:true, persistent:true
+workspace = 1, monitor:$monitorA, default:true, persistent:true
+workspace = 2, monitor:$monitorB, default:true, persistent:true
+workspace = 3, monitor:$monitorA, default:true, persistent:true
+workspace = 4, monitor:$monitorB, default:true, persistent:true
+workspace = 5, monitor:$monitorA, default:true, persistent:true
+workspace = 6, monitor:$monitorB, default:true, persistent:true
+workspace = 7, monitor:$monitorA, default:true, persistent:true
+workspace = 8, monitor:$monitorB, default:true, persistent:true
+
+
+bind = $modA, 1, movetoworkspacesilent, 1
+bind = $modA, 2, movetoworkspacesilent, 3
+bind = $modA, 3, movetoworkspacesilent, 5
+bind = $modA, 4, movetoworkspacesilent, 7
 
 bind = $modB, 1, movetoworkspacesilent, 1
 bind = $modB, 2, movetoworkspacesilent, 3
@@ -133,6 +138,8 @@ bind = $modB, O, exec, ~/.local/bin/switch_desktops.sh 1
 bind = $modB, I, exec, ~/.local/bin/switch_desktops.sh -1
 bind = $modA, O, exec, ~/.local/bin/switch_desktops.sh 1
 bind = $modA, I, exec, ~/.local/bin/switch_desktops.sh -1
+bind = $modA, BACKSLASH, swapactiveworkspaces, $monitorA $monitorB
+bind = $modB, BACKSLASH, swapactiveworkspaces, $monitorA $monitorB 
 
 # lock
 bind = $modA, L, exec, pidof hyprlock || hyprlock
@@ -156,22 +163,30 @@ binde = $modB, J, resizeactive, -40 0
 
 # rofi
 bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
-#bind = Alt, P, pseudo, # dwindle
-#bind = Alt, J, togglesplit, # dwindle
 
 # powermenu
 bind = $altControl,DELETE, exec, ~/.local/bin/powermenu.sh
 bind = Alt, 1, movewindow, mon:0
 bind = Alt, 2, movewindow, mon:1
-bind = Alt, O, exec, hyprctl dispatch focusmonitor eDP-1 && hyprctl dispatch focusmonitor HDMI-A-2
-bind = Alt, I, exec, hyprctl dispatch focusmonitor HDMI-A-2 && hyprctl dispatch focusmonitor eDP-1
+bind = Alt, O, exec, hyprctl dispatch focusmonitor $monitorA && hyprctl dispatch focusmonitor $monitorB
+bind = Alt, I, exec, hyprctl dispatch focusmonitor $monitorB && hyprctl dispatch focusmonitor $monitorA
 
 # media control
-bind = $modB,P, exec, playerctl --player=spotify play-pause
-bind = $modB, E,exec, playerctl --player=spotify previous
-bind = $modB, R,exec,  playerctl --player=spotify next
+bind = $modA, P, exec, playerctl --player=spotify play-pause
+bind = $modA, E, exec, playerctl --player=spotify previous
+bind = $modA, R, exec, playerctl --player=spotify next
+bind = $modB, P, exec, playerctl --player=spotify play-pause
+bind = $modB, E, exec, playerctl --player=spotify previous
+bind = $modB, R, exec,  playerctl --player=spotify next
+
 # window rules
 windowrule=float,title:^(Picture-in-Picture)$
+windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
+windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
+windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
+windowrulev2 = noblur, class:^(xwaylandvideobridge)$
+windowrulev2 = nofocus, class:^(xwaylandvideobridge)$
 
 # audio control
 binde=, XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
@@ -181,14 +196,19 @@ bind=,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
 binde=,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
 binde=,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 
-# screenshots
-bind = SUPER_SHIFT, S, exec, ~/.local/bin/screenshot.sh
+# handle lid open and close
+bindl=,switch:on:Lid Switch, exec, ~/.local/bin/handle_lid.sh closed
+bindl=,switch:off:Lid Switch, exec, ~/.local/bin/handle_lid.sh open
 
+# screenshots
+bind = SUPER_SHIFT, S, exec, grimblast --freeze copy area
+
+# move focus between windows
 bind = Alt, J, movefocus, l
 bind = Alt, K, movefocus, r
 bind = Alt, U, movefocus, u
 bind = Alt, N, movefocus, d
 
-# Move/resize windows with mainMod + LMB/RMB and dragging
+# move and resize windows via mouse
 bindm = Alt, mouse:272, movewindow
 bindm = Alt, mouse:273, resizewindow
