--- a/laptop/hypr/hyprlock.conf
+++ b/laptop/hypr/hyprlock.conf
@@ -1,3 +1,5 @@
+source = ~/.config/hypr/settings.conf
+
 # BACKGROUND
 background {
     monitor = 
@@ -18,7 +20,7 @@ general {
 
 # INPUT FIELD
 input-field {
-    monitor = eDP-1
+    monitor = $monitorA
     size = 250, 60
     outline_thickness = 2
     rounding = 0
@@ -26,10 +28,10 @@ input-field {
     dots_spacing = 0.2 # Scale of dots' absolute size, 0.0 - 1.0
     dots_rounding = -2
     dots_center = true
-    outer_color = rgb(51, 204, 255)
-    inner_color = rgb(30, 33, 39)
-    font_color = rgb(255, 255, 255)
-    check_color = rgb(254, 208, 112)
+    outer_color = rgba(33CCFFFF) rgba(33CCFFFF) 45deg
+    inner_color = rgba(30, 33, 39, 1.0)
+    font_color = rgba(255, 255, 255, 1.0)
+    check_color = rgba(254, 208, 112, 1.0)
     fail_color = rgb(235, 75, 75)
     fail_text = Failed
     fade_on_empty = false
