--- a/laptop/hypr/hyprpaper.conf
+++ b/laptop/hypr/hyprpaper.conf
@@ -1,6 +1,4 @@
-preload=/home/john/.wallpapers/street.jpg
-wallpaper=eDP-1, /home/john/.wallpapers/street.jpg
-wallpaper=HDMI-A-2, /home/john/.wallpapers/street.jpg
-
+preload=/home/john/.config/hypr/wallpapers/street.jpg
+wallpaper=, /home/john/.config/hypr/wallpapers/street.jpg
 splash=false
 ipc=on
