--- a/laptop/alacritty/alacritty.toml
+++ b/laptop/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+
 [font]
 size=10.0
 
@@ -14,5 +15,16 @@ family = "MesloLGS NF"
 style = "Regular"
 
 [window.padding]
-x = 10
-y = 10
+x = 5
+y = 5
+
+[cursor.style]
+blinking = "always"
+
+[general]
+import = [
+        "~/.config/alacritty/dracula_plus.toml"
+]
+
+[env]
+TERM = "xterm-256color"
