--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,17 +1,18 @@
 
 [font]
-size=10.0
+size=10
+
 
 [font.bold]
-family = "MesloLGS NF"
+family = "CaskaydiaMono Nerd Font"
 style = "Bold"
 
 [font.italic]
-family = "MesloLGS NF"
+family = "CaskaydiaMono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "MesloLGS NF"
+family = "CaskaydiaMono Nerd Font"
 style = "Regular"
 
 [window.padding]
@@ -28,3 +29,9 @@ import = [
 
 [env]
 TERM = "xterm-256color"
+
+
+[keyboard]
+bindings = [
+{ key = "F11", action = "ToggleFullscreen" }
+]
