--- a/hypr/settings.conf
+++ b/hypr/settings.conf
@@ -1,12 +1,11 @@
 # monitors
-$monitorA=eDP-1
-$monitorB=HDMI-A-2
-
+$monitorA=LVDS-1
+$monitorB=DP-1
 # modifiers
 $mainMod = SUPER
 $altControl = Alt_CTRL
-$modA = Alt_CTRL
-$modB = Alt_SHIFT
+$modA = SUPER_CTRL
+$modB = SUPER_SHIFT
 $modC = SUPER
 
 
