--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,11 +2,16 @@ source = ~/.config/hypr/settings.conf
 
 # monitor settings
 monitor=$monitorA,1920x1080@60,0x0,1
-monitor=$monitorB,preferred@highrr,1920x0,1
+monitor=$monitorB,preferred@highrr,1920x0,1, transform, 1
+
+monitor=Unknown-1,disable
 
 # startup programs
+
+exec-once = ~/.local/bin/on_login.sh 
 exec-once = hyprpaper
 exec-once = hypridle
+exec-once = hyprsunset
 exec-once = waybar
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = dunst
@@ -45,14 +50,20 @@ input {
     	scroll_factor=0.2
     	disable_while_typing = false
     	middle_button_emulation = false
+        tap-to-click=false
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
 
+device {
+    name = tpps/2-ibm-trackpoint
+    sensitivity = -0.2
+}
+
 general {
-    gaps_in = 5
-    gaps_out = 11
+    gaps_in = 2
+    gaps_out = 4
     border_size = 2
     col.active_border = rgba($activeBorder)
     col.inactive_border = rgba($border)
@@ -62,10 +73,10 @@ general {
 }
 
 decoration {
-    rounding = 0
+    rounding = 4
 
     blur {
-	enabled = false
+    	enabled = false
     }
 
     shadow {
@@ -76,7 +87,6 @@ decoration {
 
 animations {
     enabled = true
-    first_launch_animation = false
     bezier = custom,0.13, 1, 0.75,1
 
     animation = windows, 1, 3, custom, popin
@@ -84,7 +94,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 3, default
+    animation = workspaces, 1, 2, default
     animation = windowsMove, 1, 2.5, custom, slide
 }
 
@@ -111,6 +121,16 @@ misc {
 windowrulev2 = center, floating:[1] 
 windowrulev2 = float,class:^(xdg-desktop-portal-gtk)$
 windowrulev2 = float,title:^(Picture-in-Picture)$
+windowrulev2 = float,title:^(Open Folder)$
+windowrulev2 = float,initialTitle:Sign in - Google Accounts — Mozilla Firefox
+
+# intellij
+#windowrulev2 = tag +jb, class:^jetbrains-.$,floating:1
+#windowrulev2 = stayfocused, tag:jb
+#windowrulev2 = noinitialfocus, tag:jb
+#windowrulev2 = focusonactivate,class:^jetbrains-(?!toolbox)
+
+windowrulev2 = stayfocused,class:^jetbrains-.$,floating:1
 # workspaces
 workspace = 1, monitor:$monitorA, default:true, persistent:true
 workspace = 2, monitor:$monitorB, default:true, persistent:true
@@ -144,32 +164,42 @@ bind = $modB, BACKSLASH, swapactiveworkspaces, $monitorA $monitorB
 # lock
 bind = $modA, L, exec, pidof hyprlock || hyprlock
 
+bindd = ALT, Tab, Cycle to next window, cyclenext
+bindd = ALT SHIFT, Tab, Cycle to prev window, cyclenext, prev
+bindd = ALT, Tab, Reveal active window on top, bringactivetotop
+bindd = ALT SHIFT, Tab, Reveal active window on top, bringactivetotop
+
+
+# applications
 bind = $modA, T, exec, alacritty
 bind = $modC, T, exec, alacritty
-bind = $modC, F, exec, firefox
-bind = $modC, V, exec, code
-bind = $modC, D, exec, dolphin
-bind = $modC, S, exec, spotify
-bind = Alt, Q, killactive,
-bind = Alt, F4, killactive,
+bind = $modA, F, exec, firefox
+bind = $modA, G, exec, firefox -private-window
+bind = $modB, F, exec, firefox
+bind = $modB, G, exec, firefox -private-window
+bind = $mainMod, Q, killactive,
+bind = $mainMod, F4, killactive,
 
 
-bind = Alt, V, togglefloating,
-bind = Alt, Y, togglesplit
+bind = $mainMod, V, togglefloating,
+bind = $mainMod, Y, togglesplit
 binde = $modA, K, resizeactive, 40 0
 binde = $modA, J, resizeactive, -40 0
 binde = $modB, K, resizeactive, 40 0
 binde = $modB, J, resizeactive, -40 0
 
+
+binde =, XF86Launch1, exec, playerctl --player=spotify play-pause
+
 # rofi
-bind = Alt, W, exec, ~/.local/bin/launch_rofi.sh
+bind = $mainMod, W, exec, ~/.local/bin/launch_rofi.sh
 
 # powermenu
-bind = $altControl,DELETE, exec, ~/.local/bin/powermenu.sh
-bind = Alt, 1, movewindow, mon:0
-bind = Alt, 2, movewindow, mon:1
-bind = Alt, O, exec, hyprctl dispatch focusmonitor $monitorA && hyprctl dispatch focusmonitor $monitorB
-bind = Alt, I, exec, hyprctl dispatch focusmonitor $monitorB && hyprctl dispatch focusmonitor $monitorA
+bind = META_CTRL,DELETE, exec, ~/.local/bin/powermenu.sh
+bind = $mainMod, 1, movewindow, mon:$monitorA
+bind = $mainMod, 2, movewindow, mon:$monitorB
+bind = $mainMod, O, exec, hyprctl dispatch focusmonitor $monitorA && hyprctl dispatch focusmonitor $monitorB
+bind = $mainMod, I, exec, hyprctl dispatch focusmonitor $monitorB && hyprctl dispatch focusmonitor $monitorA
 
 # media control
 bind = $modA, P, exec, playerctl --player=spotify play-pause
@@ -182,7 +212,7 @@ bind = $modB, R, exec,  playerctl --player=spotify next
 # window rules
 windowrule=float,title:^(Picture-in-Picture)$
 windowrulev2 = opacity 0.0 override, class:^(xwaylandvideobridge)$
-windowrulev2 = noanim, class:^(xwaylandvideobridge)$
+
 windowrulev2 = noinitialfocus, class:^(xwaylandvideobridge)$
 windowrulev2 = maxsize 1 1, class:^(xwaylandvideobridge)$
 windowrulev2 = noblur, class:^(xwaylandvideobridge)$
@@ -201,14 +231,15 @@ bindl=,switch:on:Lid Switch, exec, ~/.local/bin/handle_lid.sh closed
 bindl=,switch:off:Lid Switch, exec, ~/.local/bin/handle_lid.sh open
 
 # screenshots
-bind = SUPER_SHIFT, S, exec, grimblast --freeze copy area
+bind = $modA, S, exec, grimblast --freeze copy area
+bind = $modB, S, exec, grimblast --freeze copy area
 
 # move focus between windows
-bind = Alt, J, movefocus, l
-bind = Alt, K, movefocus, r
-bind = Alt, U, movefocus, u
-bind = Alt, N, movefocus, d
+bind = $mainMod, J, movefocus, l
+bind = $mainMod, K, movefocus, r
+bind = $mainMod, U, movefocus, u
+bind = $mainMod, N, movefocus, d
 
 # move and resize windows via mouse
-bindm = Alt, mouse:272, movewindow
-bindm = Alt, mouse:273, resizewindow
+bindm = $mainMod, mouse:272, movewindow
+bindm = $mainMod, mouse:273, resizewindow
